<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Androway</string>
    <string name="app_label">Androway</string>

    <!-- UI -->
    <string name="choose_action">Choose your action</string>
    <string name="start_new_session">Start new session</string>
    <string name="show_running_session">Show running session</string>
    <string name="view_old_session">View old session</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="settings">Settings</string>
    <string name="view_settings">Settings</string>
    <string name="exit_app">Exit</string>
    <string name="ok">OK</string>
    <string name="invalid">invalid!</string>
    <string name="stop_session">Stop Session</string>

    <!-- Dialog string values (on session start) -->
    <string name="login_title">Logging in...</string>
    <string name="login_message">Logging into Androway with the following credentials:\n\n</string>
    <string name="bluetooth_title">Connecting bluetooth...</string>
    <string name="bluetooth_message">Trying to connect to the Segway with the following address:\n\n</string>
    <string name="error_title">A problem occured</string>
    <string name="error_message">An error occured during the starting of the session.</string>
    <string name="login_failed_message">The login process failed.\n\nPlease check your internet connection, your credentials or disable saving the data online.</string>
    <string name="left_during_login">The login process failed.\n\nYou left the application during the login process, please try again.</string>

    <!-- Notification string values -->
    <string name="start_session_ticker">A new session started</string>
    <string name="start_session_title">Running session</string>
    <string name="start_session_message">Select to view the running session.</string>
    <string name="session_hold_ticker">The session is put on hold</string>
    <string name="session_hold_title">Session on hold</string>
    <string name="session_hold_message">Select to continue the running session.</string>

    <!-- UI Settings View -->
    <string name="accountSettings">Account Settings</string>
    <string name="systemSettings">System Settings</string>
    <string name="emailTitle">Email address</string>
    <string name="emailSummary">Your account email address</string>
    <string name="emailInvalid">The email address must be of the correct format.\n\nPlease change your input.</string>
    <string name="passwordTitle">Password</string>
    <string name="passwordSummary">Your password</string>
    <string name="passwordInvalid">The password must have a minimum length of 6 characters.\n\nPlease change your input.</string>
    <string name="bluetoothTitle">Bluetooth address</string>
    <string name="bluetoothSummary">The bluetooth for the remote Segway</string>
    <string name="bluetoothInvalid">The bluetooth address must be of the following format:\n\n00:00:00:00:00:00\n\nPlease change your input.</string>
    <string name="logOnlineTitle">Save data online</string>
    <string name="logOnlineSummary">Store the session data online</string>
    <string name="block1LockedTitle">Top block locked</string>
    <string name="block1LockedSummary">Prevent the top block from sliding</string>
    <string name="block2LockedTitle">Bottom block locked</string>
    <string name="block2LockedSummary">Prevent the bottom block from sliding</string>
    <string name="orientationTitle">Device orientation</string>
    <string name="orientationSummary">The preferred device orientation</string>
    <string name="languageTitle">Language</string>
    <string name="languageSummary">The preferred application language</string>

    <!-- Logging -->
    <string name="add">Add</string>
    <string name="get">Show All</string>
    <string name="remove">Remove All</string>
    <string name="format">dd-MM-yyyy H:mm</string>
    <string name="added">Log added.</string>
    <string name="removed">All logs are removed.</string>
    <string name="empty">There are no logs.</string>

    <!-- Exception messages -->
    <string name="MaxPoolSizeReachedException">The Factory object pool has reached its maximum size.</string>
    <string name="NotSupportedQueryTypeException">The given query type is not supported.</string>
    <string name="MapIsEmptyException">The Map is empty.</string>
    <string name="HttpPostRequestFailedException">Assignment of post data failed.</string>
    <string name="HttpGetRequestFailedException">Could not fetch the response.</string>
    <string name="ConstructingLoggingManagerFailedException">The login process of the HttpManager failed.</string>
</resources>